# Enhanced-RNN---LTSM-Based-Network-Intrustion-Detection-using-Federated-Learning

./: An Enhanced RNN & LTSM Based NIDS using Federated Learning.docx  README.md  detailed_results.txt  federated-learning-analysis.py  intrusion-detection-lstm-rnn.py  metrics_logger.py  pyproject.toml  requirements.txt  server.py  visualization-code.py  ~$ Enhanced RNN & LTSM Based NIDS using Federated Learning.docx  ~WRL0003.tmp
Base Model Metrics/: evaluation_metrics.txt
Federated NIDS/: client.py
Federated NIDS/fl_results/client_0/: confusion_matrix.txt  final_confusion_matrix.txt  final_metrics.json  model_summary.txt  round_1_metrics.json  round_3_metrics.json
Federated NIDS/fl_results/client_1/: model_summary.txt  roc_data.txt  round_1_metrics.json
Federated NIDS/fl_results/server/: round_1_eval_metrics.json  round_2_metrics.json  round_3_eval_metrics.json  round_3_metrics.json
fl_results/client_0/: final_pr_data.txt  metrics.json  roc_data.txt  round_2_metrics.json
fl_results/client_1/: final_confusion_matrix.txt  final_metrics.json  metrics.json  pr_data.txt  round_2_metrics.json  round_3_metrics.json
fl_results/server/: round_1_metrics.json  round_2_eval_metrics.json
