[project]
name = "nids-rnn-lstm-federated"
version = "0.1.0"
description = "Federated Intrusion Detection System using Flower"
dependencies = [
    "flwr>=1.5.0",
    "tensorflow>=2.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0"
]

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 32
num-partitions = 3
verbose = 1 